# osp-magnum

./: .clang-tidy  .gitignore  .gitmodules  .mailmap  CMakeLists.txt  LICENSE.txt  OSP-MAGNUM.cbp  README.md  gtest-iwyu.imp  iwyu-gentoo.imp  iwyu-ubuntu.imp  iwyu.imp
src/: CMakeLists.txt  DebugObject.cpp  DebugObject.h  OSPMagnum.cpp  OSPMagnum.h  main.cpp  static_library_dummy_file.cpp  types.h
src/adera/: CMakeLists.txt  Plume.h  ShipResources.cpp  ShipResources.h  SysExhaustPlume.cpp  SysExhaustPlume.h  SysMap.cpp  SysMap.h  application.h  wiretypes.h
src/adera/Machines/: Container.cpp  Container.h  RCSController.cpp  RCSController.h  Rocket.cpp  Rocket.h  UserControl.cpp  UserControl.h
src/adera/Shaders/: MapTrailShader.cpp  MapTrailShader.h  Phong.cpp  Phong.h  PlumeShader.cpp  PlumeShader.h
src/adera/activescene/: VehicleBuilder.cpp  VehicleBuilder.h  vehicles_vb_fn.cpp  vehicles_vb_fn.h
src/adera/drawing/: CameraController.cpp  CameraController.h
src/adera/drawing_gl/: flat_shader.h  phong_shader.h  plume_shader.cpp  plume_shader.h  visualizer_shader.cpp  visualizer_shader.h
src/adera/machines/: links.cpp  links.h
src/adera/universe_demo/: simulations.cpp  simulations.h
src/adera_app/: CMakeLists.txt  application.cpp  application.h  feature_interfaces.h
src/adera_app/features/: common.cpp  common.h  jolt.cpp  jolt.h  misc.cpp  misc.h  newton.cpp  newton.h  physics.cpp  physics.h  shapes.cpp  shapes.h  terrain.cpp  terrain.h  universe.cpp  universe.h  universe_sims.cpp  universe_sims.h  vehicles.cpp  vehicles.h  vehicles_machines.cpp  vehicles_machines.h  vehicles_prebuilt.cpp  vehicles_prebuilt.h
src/adera_drawing_gl/: CMakeLists.txt  flat_shader.cpp  flat_shader.h  phong_shader.cpp  phong_shader.h  plume_shader.cpp  plume_shader.h  visualizer_shader.h
src/gdextension/: CMakeLists.txt  feature_interfaces.h  flying_scene.cpp  flying_scene.h  input.cpp  input.h  register_types.cpp  register_types.h  render.cpp  render.h  scenarios.cpp  scenarios.h
src/gdextension/sessions/: godot.cpp  godot.h
src/gdextension/templates/: CMakeLists.txt  osp.gdextension
src/newtondynamics_physics/: SysNewton.cpp  SysNewton.h  factors.h  ospnewton.h
src/osp/: CMakeLists.txt  CommonMath.h  CommonPhysics.cpp  CommonPhysics.h  FunctonOrder.cpp  FunctonOrder.h  OSPApplication.cpp  OSPApplication.h  PhysicsConstants.h  Satellite.cpp  Satellite.h  Types.h  Universe.cpp  Universe.h  UserInputHandler.cpp  UserInputHandler.h  aligned_allocator.h  bitvector.h  coordinates.cpp  coordinates.h  global_id.h  hierarchical_bitset.h  id_map.h  id_registry.h  id_set.h  keyed_bitview.h  keyed_vector.h  logging.h  scene.cpp  scene.h  shared_string.h  string_buffer.h  string_concat.h  types.h  universetypes.h  unpack.h
src/osp/Active/: ActiveScene.cpp  ActiveScene.h  DebugObject.cpp  DebugObject.h  FtrNewtonBody.cpp  FtrNewtonBody.h  FtrPlanet.cpp  FtrPlanet.h  FtrVehicle.cpp  FtrVehicle.h  Shader.h  SysAreaAssociate.cpp  SysAreaAssociate.h  SysDebugObject.cpp  SysDebugObject.h  SysDebugRender.cpp  SysDebugRender.h  SysForceFields.cpp  SysForceFields.h  SysGUI.cpp  SysGUI.h  SysHierarchy.cpp  SysHierarchy.h  SysMachine.cpp  SysMachine.h  SysNewton.cpp  SysNewton.h  SysPhysics.cpp  SysPhysics.h  SysPrefabInit.cpp  SysPrefabInit.h  SysRender.cpp  SysRender.h  SysSceneGraph.cpp  SysSceneGraph.h  SysSignal.h  SysVehicle.cpp  SysVehicle.h  SysVehicleSync.cpp  SysVehicleSync.h  (+13 more)
src/osp/CoordinateSpaces/: CartesianSimple.cpp  CartesianSimple.h
src/osp/Machines/: NamedPoint.cpp  NamedPoint.h
src/osp/Resource/: AssetImporter.cpp  AssetImporter.h  ImporterData.h  Package.cpp  Package.h  PackageRegistry.cpp  PackageRegistry.h  PartPrototype.h  PlanetData.cpp  PlanetData.h  PrototypePart.cpp  PrototypePart.h  Resource.h  SturdyImporter.cpp  SturdyImporter.h  blueprints.cpp  blueprints.h  load_tinygltf.cpp  load_tinygltf.h  machines.h  resources.cpp  resources.h  resourcetypes.h
src/osp/Satellites/: SatActiveArea.cpp  SatActiveArea.h  SatPlanet.cpp  (+3 more)
src/osp_drawing_gl/: CMakeLists.txt  FullscreenTriShader.cpp  rendergl.cpp  rendergl.h
src/ospjolt/: CMakeLists.txt  forcefactors.h  joltinteg.h  joltinteg_fn.cpp
src/planet-a/: CMakeLists.txt  IcoSphereTree.cpp  IcoSphereTree.h  PlanetGeometryA.cpp  PlanetGeometryA.h  SubdivSkeleton.cpp  SubdivSkeleton.h  SubdivTriangleMesh.cpp  SubdivTriangleMesh.h  chunk_generate.cpp  chunk_generate.h  chunk_utils.cpp  chunk_utils.h  geometry.cpp  geometry.h  icosahedron.cpp  icosahedron.h  planeta_types.h  skeleton.cpp  skeleton.h  skeleton_subdiv.cpp  skeleton_subdiv.h  subdiv_id_registry.h  terrain_skeleton.cpp  terrain_skeleton.h
src/test_application/: ActiveApplication.cpp  ActiveApplication.h  CameraController.cpp  CameraController.h  DebugMapCamera.cpp  DebugMapCamera.h  DebugObject.cpp  DebugObject.h  MagnumApplication.cpp  MagnumApplication.h  OSPMagnum.cpp  OSPMagnum.h  README.md  TestSystemInterface.h  VehicleBuilder.cpp  VehicleBuilder.h  execution.h  flight.cpp  flight.h  main.cpp  map.cpp  map.h  scene_active.h  scene_universe.h  scene_util.cpp  scene_util.h  testapp.cpp  testapp.h
src/testapp/: CMakeLists.txt  MagnumApplication.cpp  MagnumApplication.h  MagnumWindowApp.cpp  MagnumWindowApp.h  VehicleBuilder.h  enginetest.cpp  enginetest.h  executor.cpp  executor.h  feature_interfaces.h  identifiers.h  main.cpp  scenario.h  scenarios.cpp  scenarios.h  scenarios_magnum.cpp  scenarios_magnum.h  testapp.cpp  testapp.h
src/testapp_magnum/: CMakeLists.txt  MagnumApplication.h  enginetest.cpp  main.cpp  scenarios.cpp  scenarios.h
test/: CMakeLists.txt
test/framework/: CMakeLists.txt  main.cpp
test/hierarchical_bitset/: CMakeLists.txt  main.cpp
test/id_registry/: CMakeLists.txt  main.cpp
test/resources/: CMakeLists.txt  main.cpp
test/shared_string/: CMakeLists.txt  main.cpp
test/string_concat/: CMakeLists.txt  main.cpp
test/sync_graph/: CMakeLists.txt  graph_builder.h  main.cpp
test/syncexec/: CMakeLists.txt  main.cpp
test/tasks/: CMakeLists.txt  main.cpp  task_builder.h
test/universe/: CMakeLists.txt  main.cpp
(+262 files in other folders)
